# TradeSense

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  USAGE_GUIDE.md  app.py  data_fetcher.py  demo.py  examples.py  machine_learning.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.py  trade_data.pkl  tradesense.py
.devcontainer/: Dockerfile  setup-env.mjs
.devcontainer/.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
TradeSense/: .gitignore  README.md  app.py  requirements.txt
TradeSense/data/: tickers.csv
TradeSense/src/: forecast.py  pipeline.py  scraping.py  utils.py
TradeSense/tests/: test_pipeline.py
data/: tickers.csv
server/: prompts.js  server.js
src/: __init__.py  forecast.py  pipeline.py  scraping.py  sentiment.py  utils.py
src/tradesense/: data_analysis.py  data_fetcher.py  machine_learning.py  pipeline.py
src/tradesense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tradesense/sources/: aggregate.py  base.py  finnhub.py  fmp.py  newsapi.py  rss.py
templates/: index.html
tests/: __init__.py  test_pipeline.py
tradesense/: __init__.py  cli.py  data_aggregator.py  data_collectors.py  forecasting_engine.py
web/: analysis.html  app.js  index.html  news.js  styles.css
