[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradesense"
version = "0.1.0"
description = "TradeSense Stock Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "yfinance>=0.2",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "ta>=0.11"
]

[tool.setuptools]
package-dir = {"" = "src"}
